objects/SVMXC__Doc_Template__c.object
<CustomObject>
    <description>This is to define SFM Output Document template.</description>
    <fields>
        <fullName>SVMXC__Detail_Object_Count__c</fullName>
        <label>Detail Object Count</label>
        <summaryFilterItems>
            <field>SVMXC__Doc_Template_Details__c.SVMXC__Type__c</field>
            <operation>equals</operation>
            <value>Detail_Object</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Doc_Template_Details__c.SVMXC__Object_Name__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Doc_Template_Details__c.SVMXC__Doc_Template__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsStandard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsStandard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Media_Resources__c</fullName>
        <description>To store images from style tag</description>
        <inlineHelpText>To store images from style tag</inlineHelpText>
        <label>Media Resources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Template_Id__c</fullName>
        <label>Template Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Doc Template</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>